# prepare_cc

./: .gitignore  CMakeLists.txt  analyze_include.cpp  analyze_include.h  compile_commands_processor.cpp  compile_commands_processor.h  generate_header_blocks.cpp  generate_header_blocks.h  indexer_preparator.cpp  indexer_preparator.h  log.cpp  log.h  main.cpp
